--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,7 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+.idea/modules.xml
+.idea/php.xml
+.idea/ReactJS-Google-Keep-Clone.iml
+.idea/vcs.xml
